gap problem fixed in the mobile project

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -642,6 +642,10 @@ footer{
             }
         }
 
+        .financeapp-project{
+            gap: 2.5rem !important;
+        }
+
         .project-info{
             justify-content: center;
             align-items: center;
